# DeepSlice

./: .gitignore  DS-CPU.yml  DS-test.py  Data_analysis.ipynb  DeepSlice.py  DeepSlice_example.ipynb  LICENSE  QuickNII_functions.py  README.md  does_this_work.csv  ds.py  generate_dataset.py  installation.md  plane_alignment.py  plane_cost.py  pyproject.toml  setup.py  test.py  test_1.csv  test_1.xml  unfinished_files.json  usage.md  wget-log  wget-log.1  xception_weights_tf_dim_ordering_tf_kernels.h5.REMOVED.git-id
.github/workflows/: DeepSliceTests.yml  ebrains.yml  main.yml  python-publish.yml
.ipynb_checkpoints/: Deepslice17_11_2021_Maja-checkpoint.ipynb  cell_count_to_coords-checkpoint.ipynb
DeepSlice/: __init__.py  main.py  out.json  output_saved_preds.py
DeepSlice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
DeepSlice/coord_post_processing/: angle_methods.py  depth_estimation.py  spacing_and_indexing.py
DeepSlice/metadata/: config.json  metadata_loader.py
NN_weights/: Allen_Mixed_Best.h5.REMOVED.git-id
Training/: Training.py
conda_environments/: DS-CPU.yml  DS-GPU.yml
docs/: DeepSlice.rst  conf.py  installation.md  modules.rst  usage.md
example_brain/: 03-03-21-order.csv
example_notebooks/: DeepSlice_example.ipynb
source/: conf.py  index.rst
sphinx-docs/: conf.py
test/: test.py
tests/: test_example_brain_regression.py
utilities/: C110_deepslice2.xml  QuickNII_functions.py  Untitled.ipynb  adult_to_p28_test.xml.csv  adult_to_p28_test.xml.xml  neuron_tools.py  plane_alignment.py  plane_alignment_rat.py
(+85 files in other folders)
